--- a/src/app/commentpage/commentpage.component.html
+++ b/src/app/commentpage/commentpage.component.html
@@ -23,8 +23,8 @@
 </div>
 <div class="container col-md-7 mt-3">
     <div class="container">
-        <form class="form-group frmstyle">
-            <fieldset style="border:0.5mm dashed #D6D6D6">
+        <form class="form-group frmstyle frmborder">
+            <fieldset class="frmborder">
                 <legend>
                     Ticket Information
                 </legend>
@@ -32,7 +32,7 @@
                     <dl class="dl-horizontal col-md-3 ml-3">
                         <dt class="mt-2">Problem Statement</dt>
                         <dt class="mt-3">Module</dt>
-                        <dt class="mt-3">Priority</dt>
+                        <dt class="mt-3">Priority </dt>
                         <dt style="margin-top: 30px;">Description</dt>
                         <dt style="margin-top: 35px;">Created Date</dt>
                         <dt class="mt-3">Updated Date</dt>
@@ -40,7 +40,7 @@
                     <dl class="dl-horizontal col-md-1">
                         <dt class="mt-2">:</dt>
                         <dt class="mt-3">:</dt>
-                        <dt class="mt-3">:</dt>
+                        <dt class="mt-3">: </dt>
                         <dt style="margin-top: 30px;">:</dt>
                         <dt style="margin-top: 30px;">:</dt>
                         <dt class="mt-3">:</dt>
@@ -49,7 +49,10 @@
                         <dd class="mt-2">Read/write converters not working</dd>
                         <dd class="mt-3">Spring data MongoDB</dd>
                         <dd class="mt-3">
-                            <div class="btn btn-danger"> High</div>
+                            <div class="btn btn-danger" style="color: white;"> High</div>
+                            <div style="margin-left: 10cm;margin-top: -7mm;"><b>Status</b></div>
+                            <div style="margin-left: 15cm;margin-top: -7mm;"><b>:</b></div>
+                            <div style="margin-left: 17cm;margin-top: -7mm;" class="text-muted">Open</div>
                         </dd>
                         <dd class="mt-3">Converter although it doesn't convert from a store-supported type .You might want to check you annota&on setup at the converter implementation.</dd>
                         <dd class="mt-0">12/Dec/19 2:46 PM</dd>
@@ -60,7 +63,7 @@
         </form>
     </div>
     <div>
-        <button type="button" class="btn btn-info btn-arrow-right ml-4 mt-3 btn-lg">Comments</button>
+        <button type="button" class="btn btn-info btn-arrow-right ml-4 mt-3 btn-lg" style="color: white;">Comments</button>
     </div>
     <div class="row">
         <div class="col-md-1 mt-4">
@@ -109,7 +112,7 @@
         <div class="float-right ml-4 mt-4">
             <button class="btn postbtn">
                 <i class="fas fa-edit" aria-hidden="true" style="color: white;"></i>&nbsp;
-                <b>Post</b>
+                <b style="color: white;">Post</b>
             </button>
         </div>
     </div>
