--- a/src/app/editorpage/editorpage.component.html
+++ b/src/app/editorpage/editorpage.component.html
@@ -25,9 +25,7 @@
             <label style="color: #AF473C;"><b>Problem Statement</b>  &nbsp;<span class="text-danger">*</span></label>
         </div>
         <div class="form-group">
-            <textarea rows="3" class=form-control>
-            Can’t login to application
-            </textarea>
+            <textarea rows="3" class=form-control #problemtext></textarea>
         </div>
         <div style="margin-right: 400px;margin-top: 20px;margin-right: 350px;">
             <b style="color: #AF473C;">Select Module &nbsp;<span class="text-danger">*</span></b>
@@ -38,9 +36,9 @@
         </div>
         <div style="margin-left:500px;margin-top: -65px;">
             <b style="color: #AF473C;"> Priority &nbsp;<span class="text-danger">*</span></b>
-            <select class="custom-select">
+            <select class="custom-select" #Priority>
             <option selected>Select</option>
-            <option value="1"></option>
+            <option value="1">1</option>
              </select>
         </div>
         <div class="mt-3">
@@ -50,7 +48,7 @@
             <ckeditor [editor]="Editor" data=""></ckeditor>
         </div>
         <div>
-            <button class="btn btn-sm " style="background-color:#1D8DA4;margin-left:550px;color: white;">
+            <button class="btn btn-sm " (click)="submit(problemtext.value,Priority.value)" style="background-color:#1D8DA4;margin-left:550px;color: white;">
             <i class="fa fa-check" aria-hidden="true"></i>
                 Submit
             </button>
