--- a/src/app/registerinfo/registerinfo.component.html
+++ b/src/app/registerinfo/registerinfo.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="col-md-4 offset-4">
-    <form class="frmstyle">
+    <form [formGroup]="regform" (ngSubmit)="onSubmit()" class="frmstyle">
         <div style="margin-left: 45%;margin-top: -60px;">
             <img src="./assets/laptop.png" width="50px" height="50px">
         </div>
@@ -10,33 +10,64 @@
             </legend>
             <div class="form-group">
                 <label>Fisrt Name  &nbsp;<span class="text-danger">*</span></label>
-                <input type="text" class="form-control">
+                <input type="text" formControlName="firstname" class="form-control" [ngClass]="{'is-invalid': submitted}">
+                <div *ngIf="f.firstname.invalid && (f.firstname.dirty || f.firstname.touched)">
+                    <span *ngIf="f.firstname.errors.required" class="text-danger">Firstname is required</span>
+                    <span *ngIf="f.firstname.errors.minlength" class="text-danger">Must contain min 5 Characters</span>
+                </div>
             </div>
             <div class="form-group">
                 <label>Last Name&nbsp;<span class="text-danger">*</span></label>
-                <input type="text" class="form-control">
+                <input type="text" formControlName="lastname" class="form-control" [ngClass]="{'is-invalid': submitted}">
+                <div *ngIf="f.lastname.invalid && (f.lastname.dirty || f.lastname.touched)">
+                    <span *ngIf="f.lastname.errors.required" class="text-danger">Lastname is required</span>
+                </div>
             </div>
             <div class="form-group">
                 <label>User Name&nbsp;<span class="text-danger">*</span></label>
-                <input type="text" class="form-control">
+                <input type="text" formControlName="username" class="form-control" [ngClass]="{'is-invalid': submitted}">
+                <div *ngIf="f.username.invalid && (f.username.dirty || f.username.touched)">
+                    <span *ngIf="f.username.errors.required" class="text-danger">Username is required</span>
+                    <span *ngIf="f.firstname.errors.minlength" class="text-danger">Must contain min 5 Characters</span>
+                </div>
             </div>
             <div class="form-group">
                 <label>Email ID&nbsp;<span class="text-danger">*</span></label>
-                <input type="text" class="form-control">
+                <input type="text" formControlName="email" class="form-control" [ngClass]="{'is-invalid': submitted}">
+                <div *ngIf="f.email.invalid && (f.email.dirty || f.email.touched)">
+                    <span *ngIf="f.email.errors.required" class="text-danger">Email-id is required</span>
+                    <span *ngIf="f.email.errors.email" class="text-danger">Enter valid Email-id</span>
+                </div>
             </div>
+
             <div class="form-group">
                 <label>Organization Name&nbsp;<span class="text-danger">*</span></label>
-                <input type="text" class="form-control">
+                <input type="text" formControlName="orgname" class="form-control" [ngClass]="{'is-invalid': submitted}">
+                <div *ngIf="f.orgname.invalid && (f.orgname.dirty || f.orgname.touched)">
+                    <span *ngIf="f.orgname.errors.required" class="text-danger">Organization Name is required</span>
+                </div>
             </div>
+
+
             <div class="form-group">
                 <label>Password&nbsp;<span class="text-danger">*</span></label>
-                <input type="text" class="form-control">
+                <input type="text" formControlName="password" class="form-control" [ngClass]="{'is-invalid': submitted}" type="password">
+                <div *ngIf="f.password.invalid && (f.password.dirty || f.password.touched)">
+                    <span *ngIf="f.password.errors.required" class="text-danger">Password is required</span>
+                    <span *ngIf="f.firstname.errors.minlength" class="text-danger">Must contain min 5 Characters</span>
+                </div>
             </div>
+
             <div class="form-group">
                 <label>Confirm Password&nbsp;<span class="text-danger">*</span></label>
-                <input type="text" class="form-control">
+                <input type="text" formControlName="cpassword" class="form-control " [ngClass]="{'is-invalid': submitted}" type="password">
+                <div *ngIf="f.cpassword.invalid && (f.cpassword.dirty || f.cpassword.touched)">
+                    <span *ngIf="f.cpassword.errors.required" class="text-danger">Re-enter the password</span>
+                    <span *ngIf="f.cpassword.errors.mustMatch" class="text-danger">Password doesnot Match</span>
+                </div>
             </div>
-            <button class="btn btn-primary mt-3 regbtn" (click)="GoTopage('registerform')"><b>Register Now</b></button>
+
+            <button class="btn btn-primary mt-3 regbtn" (click)="onRegister(f.password,f.email)" routerLink="/registerform" type="submit"><b>Register Now</b></button>
         </fieldset>
     </form>
 </div>
